kube/cort-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cort-service
  namespace: cort
spec:
  selector:
    app: cort-api-final
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
