kube/cort-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cort-ingress
  namespace: cort
spec:
  rules:
  - host: api.cort-final.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cort-service
            port:
              number: 8080
